--- a/web/reporteRutasAeropuerto.xhtml
+++ b/web/reporteRutasAeropuerto.xhtml
@@ -4,17 +4,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Reportes</title>
     </h:head>
     <h:body>
-        
-        <div>
-            <p:inputText
-                value="#{reportController.idAeropuerto}"
-                            required="true"></p:inputText>
-            <input type="button" onclick="#{reportController.reportar()}"></input>
-        </div>
-
+        <h:form>
+            <h:inputText value="#{reportController.idAeropuerto}" required="true"></h:inputText>
+            <h:commandButton action="#{reportController.reportar()}" value="Generar"/>
+        </h:form>          
     </h:body>
 </html>
 
